--- a/style2.css
+++ b/style2.css
@@ -1228,6 +1228,7 @@ nav a:hover {
   font-weight: 600;
   text-align: center;
   margin-bottom: 0;
+  text-decoration: none;
 }
 .text-welcome-list {
   display: flex;
