--- a/style2.css
+++ b/style2.css
@@ -1229,6 +1229,7 @@ nav a:hover {
   text-align: center;
   margin-bottom: 0;
   text-decoration: none;
+  align-self: center;
 }
 .text-welcome-list {
   display: flex;
