Création d'un résultat dans une fonction

--- a/style2.css
+++ b/style2.css
@@ -1918,6 +1918,7 @@ nav a:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
 .indication > p {
