--- a/style2.css
+++ b/style2.css
@@ -312,16 +312,44 @@
     opacity: 1;
   }
 }
+@keyframes flecheOuvre {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
+}
+@keyframes flecheFerme {
+  0% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 body {
   background-color: white;
   max-width: 1500px;
   margin: 0 auto;
   font-family: "Aleo", serif;
+  scrollbar-color: #0B6463;
 }
 
 a {
   text-decoration: none;
   width: 100%;
+}
+
+.banniere-content {
+  width: 100%;
+  height: 250px;
+}
+
+.banniere {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 
 .header {
@@ -337,14 +365,9 @@ a {
 }
 
 .div-header-border {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: space-around;
-  padding-bottom: 20px;
   padding-top: 20px;
   width: 98%;
-  border-bottom: black solid 3px;
+  position: relative;
 }
 @media screen and (max-width: 600px) {
   .div-header-border {
@@ -364,6 +387,15 @@ a {
   width: 5%;
 }
 
+.titre-header-content {
+  position: absolute;
+  top: 30%;
+  left: 16%;
+  width: 70%;
+  background-color: #0B6463;
+  opacity: 0.8;
+}
+
 .logo-header {
   width: 200px;
 }
@@ -381,10 +413,10 @@ a {
 .titre-header {
   font-family: "Aleo", serif;
   font-size: 50px;
-  color: black;
-  text-align: right;
-  width: 70%;
-  margin-bottom: 0;
+  color: white;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
 }
 @media screen and (max-width: 800px) {
   .titre-header {
@@ -485,9 +517,9 @@ a {
 
 .nav {
   position: relative;
-  width: 100%;
+  width: 98%;
   padding-top: 10px;
-  background-color: white;
+  background-color: #0B6463;
   margin-top: 0;
   z-index: 100000000;
 }
@@ -497,7 +529,7 @@ nav ul {
   justify-content: space-around;
   padding: 0;
   list-style-type: none;
-  background-color: white;
+  background-color: #0B6463;
   margin-top: 0;
 }
 
@@ -505,7 +537,7 @@ nav ul li {
   float: left;
   text-align: center;
   position: relative;
-  background-color: white;
+  background-color: #0B6463;
   position: sticky;
 }
 @media screen and (max-width: 900px) {
@@ -523,20 +555,21 @@ nav ul ::after {
 nav a {
   display: block;
   text-decoration: none;
-  color: black;
+  color: white;
   border-bottom: 2px solid transparent;
   padding: 10px 0px;
+  font-size: 20px;
 }
 
 nav a:hover {
-  color: green;
-  border-bottom: 2px solid green;
+  color: #18A98D;
+  border-bottom: 2px solid #18A98D;
 }
 
 .sous {
   display: none;
   box-shadow: 0px 1px 2px #ccc;
-  background-color: white;
+  background-color: #0B6463;
   position: absolute;
   width: 100%;
   z-index: 1000;
@@ -672,6 +705,26 @@ nav a:hover {
   }
 }
 
+#iconeFlecheMenu, #iconeFlecheMenu1 {
+  margin-left: 7px;
+}
+
+.icone-fleche-ouvre {
+  transform: rotate(0deg);
+  animation: flecheOuvre 500ms forwards;
+  animation-play-state: paused;
+}
+
+.icone-fleche-ferme {
+  transform: rotate(90deg);
+  animation: flecheFerme 500ms forwards;
+  animation-play-state: paused;
+}
+
+.style-fleche {
+  transform: rotate(0deg);
+}
+
 .contain-fleche {
   display: flex;
   flex-direction: row;
@@ -762,7 +815,7 @@ nav a:hover {
   flex-direction: column;
   border-top: 3px black solid;
   font-family: "Aleo", serif;
-  background-color: #18A98D;
+  background-color: #0B6463;
 }
 @media screen and (max-width: 620px) {
   #footer {
@@ -794,7 +847,7 @@ nav a:hover {
   text-align: center;
   width: auto;
   text-decoration: underline;
-  color: #0B6463;
+  color: white;
   scale: 0.9;
   transition-duration: 200ms;
 }
@@ -873,7 +926,7 @@ nav a:hover {
 }
 
 .footer-about-link {
-  color: #0B6463;
+  color: white;
   margin: 3px;
   font-size: 12px;
 }
@@ -909,9 +962,10 @@ nav a:hover {
 
 .logo-fb, .logo-mail {
   width: 30px;
-  height: 30px;
+  height: 20px;
   margin-right: 10px;
   border-radius: 30px;
+  background-color: white;
 }
 @media screen and (max-width: 800px) {
   .logo-fb, .logo-mail {
@@ -1198,6 +1252,158 @@ nav a:hover {
   height: 50px;
   margin-right: 10px;
   margin-left: -60px;
+}
+
+.demi-cercle1 {
+  width: 200px;
+  height: 100px;
+  border-radius: 0 100px 0 100px;
+  background-color: #0B6463;
+  opacity: 0.3;
+  transform: rotate(10deg);
+  transform-origin: bottom right;
+  margin-top: -30px;
+}
+
+.demi-cercle2 {
+  width: 200px;
+  height: 100px;
+  border-radius: 100px 0 100px 0;
+  background-color: #18A98D;
+  opacity: 0.3;
+  transform: rotate(-15deg);
+  transform-origin: bottom left;
+  margin-top: -30px;
+}
+
+.demi-cercle2-2 {
+  transform: rotate(10deg);
+  margin-top: -100px;
+}
+
+.demi-cercle3 {
+  width: 200px;
+  height: 100px;
+  border-radius: 0 100px 0 100px;
+  background-color: #4C8D8C;
+  opacity: 0.3;
+  transform-origin: bottom right;
+  margin-top: -100px;
+  transform: rotate(-10deg);
+}
+
+.demi-cercle3-1 {
+  transform: rotate(15deg);
+}
+
+.demi-cercle3-3 {
+  transform: rotate(-30deg);
+  margin-top: -100px;
+}
+
+.demi-cercle4 {
+  width: 200px;
+  height: 100px;
+  border-radius: 0 100px 0 100px;
+  background-color: coral;
+  opacity: 0.3;
+  transform: rotate(10deg);
+  transform-origin: bottom right;
+  margin-top: -30px;
+}
+
+.container-state-home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 98%;
+}
+
+.img-home-who {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.container-img-home {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  border: 3px solid #0B6463;
+}
+
+.sup-img-home {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 50px 0 50px 0;
+}
+
+.section-text-img-home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 50px 0 100px 0;
+}
+
+.div-container-text-home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 98%;
+  box-shadow: 5px 5px 15px 5px whitesmoke;
+  padding-bottom: 30px;
+}
+
+.sup-text-home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+}
+
+.container-text-home {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text-home1 {
+  height: 110px;
+}
+
+.text-home2 {
+  height: 130px;
+}
+
+.text-home3 {
+  height: 220px;
+}
+
+.text-home4 {
+  height: 80px;
+}
+
+.text-home {
+  width: 98%;
+}
+
+.text-home-P {
+  font-size: 20px;
+}
+
+.alinea-text {
+  width: 10px;
+  background-color: #18A98D;
+  height: 100%;
 }
 
 #content1 {
@@ -1669,11 +1875,173 @@ nav a:hover {
 }
 
 #text-index {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 30px 0 30px 0;
 }
 
 #text-index > p {
   text-align: center;
+  font-size: 20px;
+}
+
+.etape-accueil {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 98%;
+  margin: 30px 0 30px 0;
+  padding: 10px;
+}
+
+.texte-demi-cercle {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  padding: 10px;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 5px whitesmoke;
+}
+
+.container-circle {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-circle {
+  text-decoration: none;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.P-circle, .P-circle-plus {
+  font-size: 20px;
+}
+
+.P-circle-plus {
+  text-align: center;
+  color: white;
+}
+
+.plus-circle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: #0B6463;
+  border-radius: 30px;
+  width: 20%;
+  align-self: right;
+}
+
+.container-plus-circle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+
+.section-scroll {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 70px 0 70px 0;
+}
+
+.scroll-and-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 98%;
+}
+
+.scroll-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  width: 70%;
+  scroll-behavior: smooth;
+}
+
+.all-subjects {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 800px;
+  margin-right: -200px;
+  width: 2000px;
+  padding: 30px;
+}
+
+#scroll1, #scroll2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+
+.scroll-subject {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border: 2px whitesmoke solid;
+  border-radius: 30px;
+  box-shadow: whitesmoke 5px 5px 15px 5px;
+  width: 250px;
+  height: 200px;
+}
+
+.content-link {
+  display: flex;
+  align-self: center;
+  background-color: #0B6463;
+  border-radius: 30px;
+  padding: 5px;
+  width: 30%;
+}
+
+.scroll-subject-link {
+  color: white;
+  text-align: center;
+}
+
+.scroll-arrow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+
+.img-left-scroll {
+  display: none;
+  transform: rotate(-90deg);
+  color: black;
+  font-size: 40px;
+}
+
+.img-right-scroll {
+  transform: rotate(90deg);
+  color: black;
+  font-size: 40px;
 }
 
 .image-geste {
@@ -2237,6 +2605,8 @@ h3 {
 
 h2 {
   text-align: center;
+  font-weight: 500;
+  font-size: 33px;
 }
 
 #actu {
