--- a/style2.css
+++ b/style2.css
@@ -345,6 +345,11 @@ a {
   width: 100%;
   height: 250px;
 }
+@media screen and (max-width: 450px) {
+  .banniere-content {
+    height: 200px;
+  }
+}
 
 .banniere {
   width: 100%;
@@ -395,6 +400,18 @@ a {
   background-color: #0B6463;
   opacity: 0.8;
 }
+@media screen and (max-width: 1328px) {
+  .titre-header-content {
+    top: 25%;
+  }
+}
+@media screen and (max-width: 340px) {
+  .titre-header-content {
+    top: 20%;
+    left: 6%;
+    width: 90%;
+  }
+}
 
 .logo-header {
   width: 200px;
@@ -418,19 +435,17 @@ a {
   margin: 0;
   padding: 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .titre-header {
     font-size: 42px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 620px) {
   .titre-header {
-    width: 100%;
-    margin-left: 0px;
     font-size: 35px;
   }
 }
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 450px) {
   .titre-header {
     font-size: 25px;
   }
@@ -492,18 +507,6 @@ a {
   align-self: flex-start;
   width: 35px;
   margin-left: 25px;
-}
-@media screen and (max-width: 600px) {
-  #bouton {
-    margin-top: -220px;
-    margin-bottom: 170px;
-  }
-}
-@media screen and (max-width: 340px) {
-  #bouton {
-    margin-top: -185px;
-    margin-bottom: 170px;
-  }
 }
 
 #bouton > button {
@@ -597,7 +600,7 @@ nav a:hover {
   font-size: 12px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   #bouton {
     display: block;
     display: flex;
@@ -610,7 +613,7 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
+    width: 333px;
     border-radius: 20px;
   }
   .nav ul {
@@ -618,24 +621,22 @@ nav a:hover {
   }
   .nav ul li {
     text-align: start;
-    width: 300px;
+    width: 333px;
     background-color: rgba(0, 128, 0, 0.041);
   }
   .nav {
     display: none;
-    width: 300px;
-    margin-top: 40px;
+    width: 350px;
     position: absolute;
-    top: 200px;
-    left: 30px;
+    top: 340px;
+    left: 20px;
     border-radius: 30px;
   }
   .nav a {
     padding: 10px;
-    width: 92%;
+    width: 99%;
   }
   .sous {
-    display: block;
     position: relative;
     box-shadow: unset;
     padding: 0;
@@ -657,29 +658,33 @@ nav a:hover {
     border-bottom-right-radius: 15px;
   }
 }
-@media screen and (max-width: 728px) {
-  .nav {
-    margin-top: 40px;
-  }
-}
-@media screen and (max-width: 683px) {
-  .nav {
-    width: 30%;
-  }
-}
 @media screen and (max-width: 601px) {
   .nav {
     left: 22px;
-    margin-top: -120px;
   }
 }
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 450px) {
   .nav {
-    width: 35%;
+    top: 300px;
   }
 }
 
 @media screen and (max-width: 490px) {
+  .nav {
+    left: 20px;
+    width: 320px;
+  }
+  .nav ul li {
+    width: 303px;
+  }
+  #display {
+    width: 303px;
+  }
+  .nav a {
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 370px) {
   .nav {
     left: 20px;
     width: 200px;
@@ -689,6 +694,19 @@ nav a:hover {
   }
   #display {
     width: 200px;
+  }
+  #iconeFlecheMenu1 {
+    position: absolute;
+    left: 120px;
+    top: 35px;
+  }
+  .nav a {
+    width: 88%;
+  }
+}
+@media screen and (max-width: 350px) {
+  #bouton {
+    margin-top: -20px;
   }
 }
 .fleche-menu-anim {
@@ -732,7 +750,7 @@ nav a:hover {
   justify-content: center;
   align-items: center;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .contain-fleche {
     justify-content: flex-start;
   }
@@ -756,8 +774,8 @@ nav a:hover {
   }
 }
 .sousQuizz {
-  width: 120px;
-  margin-left: -20px;
+  width: 320px;
+  margin-left: -100px;
 }
 @media screen and (max-width: 900px) {
   .sousQuizz {
@@ -1437,6 +1455,11 @@ nav a:hover {
   justify-content: center;
   padding-bottom: 30px;
 }
+@media screen and (max-width: 900px) {
+  #content3 {
+    margin-top: -50px;
+  }
+}
 
 #content4 {
   display: flex;
@@ -1447,9 +1470,50 @@ nav a:hover {
   justify-content: space-around;
   padding-bottom: 60px;
 }
+@media screen and (max-width: 1100px) {
+  #content4 {
+    margin-top: 100px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  #content4 {
+    margin-top: 130px;
+  }
+}
+@media screen and (max-width: 900px) {
+  #content4 {
+    margin-top: 150px;
+  }
+}
 @media screen and (max-width: 800px) {
   #content4 {
     flex-direction: column-reverse;
+    margin-top: 300px;
+  }
+}
+@media screen and (max-width: 743px) {
+  #content4 {
+    margin-top: 350px;
+  }
+}
+@media screen and (max-width: 639px) {
+  #content4 {
+    margin-top: 400px;
+  }
+}
+@media screen and (max-width: 495px) {
+  #content4 {
+    margin-top: 450px;
+  }
+}
+@media screen and (max-width: 401px) {
+  #content4 {
+    margin-top: 500px;
+  }
+}
+@media screen and (max-width: 350px) {
+  #content4 {
+    margin-top: 550px;
   }
 }
 
